feature: y coord. support and more functions